# wallpaper_changer

./: LICENSE  README.md  pyproject.toml
src/wallpaper_changer/: wp.py
